[package]
name = "makepad-stitch"
version = "0.1.0"
edition = "2021"
description = "An experimental Wasm interpreter written in Rust that is designed to be very fast and lightweight."
license = "MIT"
readme = "README.md"
repository = "https://github.com/makepad/stitch"

[profile.dev]
opt-level = 1  

[dev-dependencies]
criterion = "0.5.1"
wast = "200.0.0"

[[bench]]
name = "benches"
harness = false
